[package]
name = "rusting_time"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap =  {version="4", features = ["derive"]}
chrono = "0.4.24"
crossterm = "0.26"
rodio = "0.20.1"
anyhow = "1.0.94"

[[bin]]
name="rt"
path="src/main.rs"
